# tree-sitter-just

./: Cargo.toml  package-lock.json  package.json
bindings/rust/: lib.rs
