[package]
name = "tree-sitter-just"
description = "just grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "just"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/syntacti/tree-sitter-just"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
